--- a/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
+++ b/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
@@ -5,9 +5,15 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <div id="app">
-      {{firstName}}
-      {{lastName}}
+    <div id="app" v-cloak>
+      <p>{{fullName() }}</p>
+      <p><a :href='url' target="_blank" >Google</a></p>
+      <p v-html="raw_url"></p>
+        <hr>
+        <label>First Name</label>
+        <input type="text" v-model="firstName">
+        <label>Last Name</label>
+        <input type="text" v-model="lastName">
     </div>
     <!-- <div id="app2">
       {{firstName}}
