--- a/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
+++ b/ZTM Vue Course Code/Section 2/section-2-1-STARTER/index.html
@@ -9,11 +9,18 @@
       <p>{{fullName() }}</p>
       <p><a :href='url' target="_blank" >Google</a></p>
       <p v-html="raw_url"></p>
+      <p>{{typeof age}}</p>
+      <button type="button" @click="increment">Increment</button>
+      <button type="button" @click="age--">Decrement</button>
         <hr>
         <label>First Name</label>
         <input type="text" v-model="firstName">
+        <label>Middle Name</label>
+        <input type="text"  @keyup.enter="updateMiddleName">
         <label>Last Name</label>
-        <input type="text" v-model="lastName">
+        <input type="text" :value="lastName" @input.prevent="updateLastName('last name event triggered!',$event)">
+        <label>Age</label><br>
+        <input type="number" v-model.number="age">
     </div>
     <!-- <div id="app2">
       {{firstName}}
